Update order emails and cancellation flow